@@ -5,14 +5,13 @@ import org.yaml.snakeyaml.Yaml;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.regex.Pattern;
 
 public final class PythonStyleYamlRuleLoader {
+
     @SuppressWarnings("unchecked")
     public List<CorrectionRule> load(InputStream inputStream) {
         Yaml yaml = new Yaml();
@@ -21,43 +20,53 @@ public final class PythonStyleYamlRuleLoader {
             return List.of();
         }
 
-        List<Map<String, Object>> rawRules = (List<Map<String, Object>>) data.getOrDefault("rules", List.of());
-        List<CorrectionRule> out = new ArrayList<>();
-        for (Map<String, Object> rawRule : rawRules) {
-            String id = RuleYamlSupport.string(rawRule.get("id"), RuleYamlSupport.string(rawRule.get("name"), "unnamed_rule"));
-            Map<String, Object> rewrite = RuleYamlSupport.map(rawRule.get("rewrite"));
-            MatchSpec spec = MatchParser.parse(rawRule, rewrite);
+        List<Map<String, Object>> rawRules =
+                (List<Map<String, Object>>) data.getOrDefault("rules", List.of());
 
-            // Deletions should happen early regardless of merge/rewrite ordering.
-            loadDeleteRules(id, rewrite, out);
+        List<CorrectionRule> out = new ArrayList<>();
+
+        for (Map<String, Object> rawRule : rawRules) {
+            String id = RuleYamlSupport.string(
+                    rawRule.get("id"),
+                    RuleYamlSupport.string(rawRule.get("name"), "unnamed_rule")
+            );
+
+            Map<String, Object> rewrite = RuleYamlSupport.map(rawRule.get("rewrite"));
+            Map<String, Object> merge = RuleYamlSupport.map(rawRule.get("merge"));
+            MatchSpec spec = MatchParser.parse(rawRule, rewrite);
 
             for (Map.Entry<String, Object> entry : rawRule.entrySet()) {
                 String key = entry.getKey();
                 switch (key) {
-                    case "merge" -> loadMergeRules(id, RuleYamlSupport.map(entry.getValue()), out);
-                    case "rewrite" -> loadRewriteRules(id, rewrite, spec, out);
+                    case "rewrite" -> {
+                        loadDeleteRules(id, rewrite, out);
+                        loadBeforeAfterRules(id, rewrite, spec, out);
+                        loadInsertRules(id, rewrite, spec, out);
+                        loadRegexRules(id, rewrite, spec, out);
+                        loadSplitRules(id, rewrite, spec, out);
+                    }
+                    case "merge" -> loadMergeRules(id, merge, out);
                     default -> {
+                        // ignore metadata such as id/name
                     }
                 }
             }
         }
+
         return out;
     }
 
-    private static void loadRewriteRules(String id, Map<String, Object> rewrite, MatchSpec spec, List<CorrectionRule> out) {
-        loadBeforeAfterRules(id, rewrite, spec, out);
-        loadInsertRules(id, rewrite, spec, out);
-        loadRegexRules(id, rewrite, spec, out);
-        loadSplitRules(id, rewrite, spec, out);
-    }
-
-    private static void loadDeleteRules(String id, Map<String, Object> rewrite, List<CorrectionRule> out) {
+    private static void loadDeleteRules(String id,
+                                        Map<String, Object> rewrite,
+                                        List<CorrectionRule> out) {
         Map<String, Object> delete = RuleYamlSupport.map(rewrite.get("delete"));
         if (delete.isEmpty()) {
             return;
         }
+
         String type = RuleYamlSupport.string(delete.get("type"), "");
         List<String> chars = RuleYamlSupport.stringList(delete.get("chars"));
+
         if ("chars".equals(type)) {
             out.add(new DeleteCharsRule(id + ":delete_chars", chars));
         } else if ("part".equals(type)) {
@@ -65,7 +74,10 @@ public final class PythonStyleYamlRuleLoader {
         }
     }
 
-    private static void loadBeforeAfterRules(String id, Map<String, Object> rewrite, MatchSpec spec, List<CorrectionRule> out) {
+    private static void loadBeforeAfterRules(String id,
+                                             Map<String, Object> rewrite,
+                                             MatchSpec spec,
+                                             List<CorrectionRule> out) {
         List<String> before = RuleYamlSupport.stringList(rewrite.get("before"));
         List<String> after = RuleYamlSupport.stringList(rewrite.get("after"));
 
@@ -75,16 +87,41 @@ public final class PythonStyleYamlRuleLoader {
 
         Map<String, String> surfaceMap = buildMapping(before, after);
         Map<String, String> glossMap = buildMapping(glossBefore, glossAfter);
-        if (!surfaceMap.isEmpty() || !glossMap.isEmpty()) {
-            out.add(new SurfaceRewriteRule(id + ":rewrite", spec, surfaceMap, glossMap));
+
+        boolean hasSurfaceRewrite = !surfaceMap.isEmpty();
+        boolean hasGlossRewrite = !glossMap.isEmpty();
+
+        if (!hasSurfaceRewrite && !hasGlossRewrite) {
+            return;
         }
+
+        if (hasGlossRewrite && !hasSurfaceRewrite) {
+            out.add(new GlossBeforeAfterRule(
+                    id + ":gloss_rewrite",
+                    spec,
+                    glossMap,
+                    true
+            ));
+            return;
+        }
+
+        out.add(new SurfaceRewriteRule(
+                id + ":rewrite",
+                spec,
+                surfaceMap,
+                glossMap
+        ));
     }
 
-    private static void loadInsertRules(String id, Map<String, Object> rewrite, MatchSpec spec, List<CorrectionRule> out) {
+    private static void loadInsertRules(String id,
+                                        Map<String, Object> rewrite,
+                                        MatchSpec spec,
+                                        List<CorrectionRule> out) {
         Map<String, Object> ins = RuleYamlSupport.map(rewrite.get("insert"));
         if (ins.isEmpty()) {
             return;
         }
+
         out.add(new InsertSegmentRule(
                 id + ":insert",
                 spec,
@@ -94,47 +131,83 @@ public final class PythonStyleYamlRuleLoader {
         ));
     }
 
-    private static void loadMergeRules(String id, Map<String, Object> merge, List<CorrectionRule> out) {
+    private static void loadMergeRules(String id,
+                                       Map<String, Object> merge,
+                                       List<CorrectionRule> out) {
         if (merge.isEmpty()) {
             return;
         }
+
         Map<String, Object> match = RuleYamlSupport.map(merge.get("match"));
         Object tokens = match.get("tokens");
-        List<List<String>> seqs = new ArrayList<>();
-        if (tokens instanceof List<?> l && !l.isEmpty() && l.getFirst() instanceof List) {
-            for (Object o : l) {
-                seqs.add(RuleYamlSupport.stringList(o));
+
+        List<List<String>> sequences = new ArrayList<>();
+        if (tokens instanceof List<?> list && !list.isEmpty() && list.get(0) instanceof List<?>) {
+            for (Object seq : list) {
+                sequences.add(RuleYamlSupport.stringList(seq));
             }
         } else if (tokens != null) {
-            seqs.add(RuleYamlSupport.stringList(tokens));
+            sequences.add(RuleYamlSupport.stringList(tokens));
         }
-        if (!seqs.isEmpty()) {
-            out.add(new MergeSequenceRule(id + ":merge", seqs));
+
+        if (!sequences.isEmpty()) {
+            out.add(new MergeSequenceRule(id + ":merge", sequences));
         }
     }
 
-    private static void loadRegexRules(String id, Map<String, Object> rewrite, MatchSpec spec, List<CorrectionRule> out) {
+    private static void loadRegexRules(String id,
+                                       Map<String, Object> rewrite,
+                                       MatchSpec spec,
+                                       List<CorrectionRule> out) {
         Map<String, Object> regexSub = RuleYamlSupport.map(rewrite.get("regex_sub"));
         if (regexSub.isEmpty()) {
             return;
         }
+
         boolean ignoreCase = RuleYamlSupport.bool(regexSub.get("ignore_case"), false);
         int flags = ignoreCase ? Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE : 0;
-        Pattern pattern = Pattern.compile(RuleYamlSupport.string(regexSub.get("pattern"), ""), flags);
+
+        Pattern pattern = Pattern.compile(
+                RuleYamlSupport.string(regexSub.get("pattern"), ""),
+                flags
+        );
+
         String scope = RuleYamlSupport.string(regexSub.get("scope"), "chuj");
         String repl = RuleYamlSupport.string(regexSub.get("repl"), "");
 
         if ("gloss".equalsIgnoreCase(scope)) {
-            out.add(new RegexSubRule(id + ":regex_gloss", spec, scope, pattern, repl));
+            out.add(new GlossReplaceRule(
+                    id + ":regex_gloss",
+                    pattern.pattern(),
+                    repl,
+                    ignoreCase
+            ));
         } else {
-            out.add(new RegexSubRule(id + ":regex_sub", spec, scope, pattern, repl));
+            out.add(new RegexSubRule(
+                    id + ":regex_sub",
+                    spec,
+                    scope,
+                    pattern,
+                    repl
+            ));
         }
     }
 
-    private static void loadSplitRules(String id, Map<String, Object> rewrite, MatchSpec spec, List<CorrectionRule> out) {
+    private static void loadSplitRules(String id,
+                                       Map<String, Object> rewrite,
+                                       MatchSpec spec,
+                                       List<CorrectionRule> out) {
         Map<String, Object> split = RuleYamlSupport.map(rewrite.get("split"));
-        if (!split.isEmpty() && "end".equals(RuleYamlSupport.string(split.get("type"), ""))) {
-            out.add(new SplitDirectionalRule(id + ":split_end", spec, RuleYamlSupport.stringList(split.get("tokens"))));
+        if (split.isEmpty()) {
+            return;
+        }
+
+        if ("end".equals(RuleYamlSupport.string(split.get("type"), ""))) {
+            out.add(new SplitDirectionalRule(
+                    id + ":split_end",
+                    spec,
+                    RuleYamlSupport.stringList(split.get("tokens"))
+            ));
         }
     }
 
@@ -142,7 +215,9 @@ public final class PythonStyleYamlRuleLoader {
         if (before.isEmpty() || after.isEmpty()) {
             return Map.of();
         }
-        Map<String, String> out = new LinkedHashMap<>();
+
+        Map<String, String> out = new HashMap<>();
+
         if (after.size() == 1) {
             String target = after.getFirst();
             for (String b : before) {
@@ -150,9 +225,11 @@ public final class PythonStyleYamlRuleLoader {
             }
             return out;
         }
+
         for (int i = 0; i < Math.min(before.size(), after.size()); i++) {
             out.put(norm(before.get(i)), after.get(i));
         }
+
         return out;
     }
 
